# research-agent

./: .gitignore  README.md  alembic.ini  docker-compose.yml  pipeline.md  problems.md  pyproject.toml  requirements.txt  tmp_uvicorn_err.txt  tmp_uvicorn_out.txt
apps/api/: config.py  dependencies.py  main.py
apps/api/routers/: analysis.py  experiments.py  ingestion.py  papers.py  qa.py  reproducibility.py  search.py
apps/worker/: graph_runner.py  main.py
docs/: agentic-qa-first-iteration.md  api-contracts.md  architecture.md  phase-2-execution-design.md  qa-evaluation-set.md
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/experiments/: page.tsx
frontend/src/app/papers/: page.tsx
frontend/src/app/qa/: page.tsx
frontend/src/components/: AppShell.tsx  Sidebar.tsx
frontend/src/lib/: api-client.ts  domain-utils.ts  types.ts
frontend/src/styles/: globals.css
migrations/: env.py
migrations/versions/: 20260317_0001_add_paper_subsections_table.py  20260317_0002_cascade_delete_paper_relations.py  20260317_0003_extend_paper_analysis_structured_fields.py  20260317_0004_add_repository_and_reproducibility_tables.py  20260317_0005_add_training_objective_to_paper_analysis.py  20260318_0006_add_generated_experiments_table.py  20260321_0007_add_domain_metadata_fields.py  20260322_0008_add_synthesis_output_to_paper_analysis.py  20260601_0009_add_paper_tables.py  20260622_0010_add_hnsw_vector_indexes.py
research_agent/: __init__.py
scripts/: reanalyze_papers.py
(+20 files in other folders)
