[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-replication-agent"
version = "0.1.0"
description = "Research paper replication agent scaffold"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.32",
  "alembic>=1.13.2",
  "psycopg[binary]>=3.2.1",
  "asyncpg>=0.29.0",
  "pgvector>=0.3.2",
  "langgraph>=0.2.14",
  "langchain-core>=0.3.0",
  "httpx>=0.27.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8",
  "ruff>=0.6.2",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["packages"]

[tool.ruff]
line-length = 100
target-version = "py311"
